<resources>
    <string name="app_name">Zaitoneh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Add item</string>
    <string name="add_store_button" translatable="false">add store</string>

    <string name="add_supplier_button" translatable="false">add supplier</string>
    <string name="box">Box</string>
    <string name="kratin">Kratin</string>
    <string name="itemLevel1">Describtion 1 </string>
    <string name="itemLevel2">Describtion 2</string>
    <string name="itemLevel3">Describtion 3</string>
    <string name="itemLevel4">Describtion 4</string>
    <string name="materials">Materials</string>
    <string name="save">Save</string>
    <string name="update" translatable="false">Update</string>
    <string name="StoreName">Store Name</string>
    <string name="SupplierName">Supplier First Name</string>
    <string name="StoreCode">Store Code </string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="storeAdress">Store Adress</string>
    <string name="SupplierAddress">Supplier Adress</string>supplierMobıle1
    <string name="SupplierMobile1">Supplier First Mobile</string>
    <string name="SupplierMobile2">Supplier Second Mobile</string>
    <string name="items">Items</string>
    <string name="stores">Stores</string>
    <string name="add_employee">add employee</string>
    <string name="full_name">Full Name</string>
    <string name="code_label">Code</string>
    <string name="mobile1">"Mobile 1 "</string>
    <string name="mobile2">Mobile2</string>
    <string name="address">Address</string>
    <string name="note">Notes</string>
    <string name="add_employee_button">Add employee</string>
    <string name="employees">Employees</string>
    <string name="receipt_type">Receipt Type</string>
    <string name="receipt_sup">Suppliers</string>
    <string name="receipt_emp">Employee</string>
    <string name="receipt_source">Source City</string>
    <string name="receipt_note">Receipt Note</string>
    <string name="share_btk">Receipt Share</string>
    <string name="receipt_dep">" Department"</string>


    <string name="selected_item" translatable="false">Selected item:</string>
    <string name="Receipts">receipts</string>

    <string name="add_reciept_button">Add Receipt</string>

    <string name="add_department_button" translatable="false">add Department</string>
    <string name="department">Department</string>
    <string name="code">Code</string>
    <string name="sup_code" translatable="false">Supplier</string>
    <string name="store" translatable="false">Store</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="price">Price</string>
    <string name="item">Item Name</string>
    <string name="add">Add</string>
    <string name="item_deleted"> The item has been deleted</string>
    <string name="departmentTracker">department Tracker</string>
    <string name="items_Tracker">Items Tracker</string>
    <string name="employeeTracker">employees Tracker</string>
    <string name="storeTracker">stores Tracker</string>
    <string name="supplierTracker">suppliers Tracker</string>
    <string name="receiptTracker">receipts Tracker</string>
    <string name="itemDetail">item Detail</string>

    <string name="Updated"> This record is updated </string>
    <string name="notUpdated">  Error This record  is not  updated </string>

    <string name="deteted"> This record is deteted </string>
    <string name="notDeteted">  Error This record  is not  deteted </string>


    <string name="Fill_all_fields">   "Please Fill all fields" </string>
    <string name="alreadyExist"> This record is already exist </string>
    <string name="inserted"> This record is inserted </string>
    <string name="notInserted">  Error This record  is not  inserted </string>
    <string name="StoreDetail">Store Detail</string>
    <string name="StoreTracker">Store Tracker</string>
    <string name="EmployeeTracker">Employee Tracker</string>
    <string name="SupplierTracker">Supplier Tracker</string>
    <string name="SupplierDetails">Supplier Details</string>
    <string name="DepatmentTracker">Depatment Tracker</string>
    <string name="DepatmentDetails">Depatment Details</string>
    <string name="Save">Save</string>
    <string name="ReceiptTracker">Receip  Tracker</string>
    <string name="ReceiptDetails">Receipt Details</string>


    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>


    <string-array name="Languages">
        <item>jwad noor </item>
        <item>haldun matar </item>
        <item>anas bakleh </item>
        <item>hasan hasn</item>
        <item>saed sood</item>
        <item>jamal kamel</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Log in</string>


</resources>



