<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/itemDetailFragment"
        android:title="@string/add_button" />
    <item
        android:id="@+id/storeDetailFragment"
        android:title="@string/add_store_button" />
    <item
        android:id="@+id/itemTrackerFragment"
        android:title="@string/items" />
    <item
        android:id="@+id/storeTrackerFragment"
        android:title="@string/stores" />
    <item

        android:id="@+id/employeeDetailFragment"
        android:title="@string/add_employee" />
    <item
        android:id="@+id/employeeTrackerFragment"
        android:title="@string/employees" />
    <item
        android:id="@+id/supplierTrackerFragment"
        android:title="Suppliers" />
    <item
        android:id="@+id/receiptTrackerFragment2"
        android:title="@string/Receipts" />
    <item
        android:id="@+id/departmentTrackerFragment"
        android:title="@string/department" />

</menu>