<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable

            name="supplierDetailViewModel"
            type="com.example.zaitoneh.supplierdetail.SupplierDetailViewModel" />
        <variable
            name="supplier"
            type="com.example.zaitoneh.database.Supplier" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <TextView
            android:id="@+id/supplier_First_Mobile"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SupplierMobile1"
            app:layout_constraintBaseline_toBaselineOf="@+id/supplier_First_Mobile_input"
            app:layout_constraintStart_toStartOf="@+id/supplier_Second_Mobile" />

        <TextView
            android:id="@+id/supplier_Address"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SupplierAddress"
            app:layout_constraintBaseline_toBaselineOf="@+id/supplier_Address_input"
            app:layout_constraintStart_toStartOf="@+id/supplier_First_Mobile" />

        <TextView
            android:id="@+id/supplier_Full_Name"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SupplierName"
            app:layout_constraintBaseline_toBaselineOf="@+id/supplier_Full_Name_input"
            app:layout_constraintStart_toStartOf="@+id/supplier_Address" />

        <TextView
            android:id="@+id/supplier_Second_Mobile"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/SupplierMobile2"
            app:layout_constraintBaseline_toBaselineOf="@+id/supplier_Second_Mobile_input"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/supplier_Full_Name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={supplier.supFullName}"
            app:supplierNameFormatted="@{supplierDetailViewModel.supplier}"
            app:layout_constraintBottom_toTopOf="@+id/supplier_Address_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/supplier_Address_input"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/supplier_Address_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={supplier.supAddress}"
            app:supplierAddressFormatted="@{supplierDetailViewModel.supplier}"
            app:layout_constraintBottom_toTopOf="@+id/supplier_First_Mobile_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/supplier_First_Mobile_input"
            app:layout_constraintTop_toBottomOf="@+id/supplier_Full_Name_input" />

        <EditText
            android:id="@+id/supplier_First_Mobile_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={supplier.supMobile1}"
            app:supplierMobile1Formatted="@{supplierDetailViewModel.supplier}"
            app:layout_constraintBottom_toTopOf="@+id/supplier_Second_Mobile_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/supplier_Second_Mobile_input"
            app:layout_constraintTop_toBottomOf="@+id/supplier_Address_input" />

    <EditText
        android:id="@+id/supplier_Second_Mobile_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@={supplier.supMobile2}"
        app:supplierMobile1Formatted="@{supplierDetailViewModel.supplier}"
        app:layout_constraintBottom_toTopOf="@+id/back_supplier_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/supplier_First_Mobile_input" />

        <Button
            android:id="@+id/back_supplier_button"
            style="@style/button_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/delete_supplier_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_supplier_button" />

        <Button
            android:id="@+id/save_supplier_button"
            style="@style/button_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> supplierDetailViewModel.onCreateSupplier(supplier)}"
            android:text="@string/save"
            app:layout_constraintBaseline_toBaselineOf="@+id/back_supplier_button"
            app:layout_constraintEnd_toStartOf="@+id/back_supplier_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/delete_supplier_button"
            style="@style/button_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> supplierDetailViewModel.OnDeleteSupplier()}"
            android:text="@string/delete"
            app:layout_constraintBaseline_toBaselineOf="@+id/back_supplier_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/back_supplier_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>