<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="storeDetailViewModel"
            type="com.example.zaitoneh.storedetail.StoreDetailViewModel" />
        <variable
            name="store"
            type="com.example.zaitoneh.database.Store" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/storeName_lable"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/StoreName"
            app:layout_constraintBottom_toTopOf="@+id/storeCode_lable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/storeCode_lable"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StoreCode"


            app:layout_constraintBottom_toTopOf="@+id/storeAddress_lable"
            app:layout_constraintStart_toStartOf="@+id/storeName_lable"
            app:layout_constraintTop_toBottomOf="@+id/storeName_lable" />

        <TextView
            android:id="@+id/storeAddress_lable"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/storeAdress"

            app:layout_constraintBottom_toTopOf="@+id/save_store_button"
            app:layout_constraintStart_toStartOf="@+id/storeCode_lable"
            app:layout_constraintTop_toBottomOf="@+id/storeCode_lable" />

        <EditText
            android:id="@+id/storeName_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={store.storeName}"
            app:storeNameFormatted="@{storeDetailViewModel.store}"
            app:layout_constraintBaseline_toBaselineOf="@+id/storeName_lable"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/storeCode_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={store.storeCode}"
            app:storeCodeFormatted="@{storeDetailViewModel.store}"
            app:layout_constraintBaseline_toBaselineOf="@+id/storeCode_lable"
            app:layout_constraintStart_toStartOf="@+id/storeName_input" />

        <EditText
            android:id="@+id/storeAddress_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={store.storeAddress}"
            app:addressFormatted="@{storeDetailViewModel.store}"
            app:layout_constraintBaseline_toBaselineOf="@+id/storeAddress_lable"
            app:layout_constraintStart_toStartOf="@+id/storeCode_input" />

        <Button
            android:id="@+id/save_store_button"
            style="@style/button_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> storeDetailViewModel.onCreateStoreNet(store)}"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/back_store_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/storeAddress_input"
            app:layout_constraintVertical_bias="0.259" />

        <Button
            android:id="@+id/delete_store_button"
            style="@style/button_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> storeDetailViewModel.OnDeleteStoreNet()}"
            android:text="@string/delete"
            app:layout_constraintBaseline_toBaselineOf="@+id/back_store_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/back_store_button" />

        <Button
            android:id="@+id/back_store_button"
            style="@style/button_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/back"
            app:layout_constraintEnd_toStartOf="@+id/delete_store_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/save_store_button"
            app:layout_constraintTop_toTopOf="@+id/save_store_button" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="69dp"
            android:layout_height="46dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/storeName_lable"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.222"
            app:srcCompat="@drawable/ic_store" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>