<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable

            name="receiptDetailViewModel"
            type="com.example.zaitoneh.receipt.ReceiptDetailViewModel" />
        <variable
            name="receipt"
            type="com.example.zaitoneh.database.Receipt" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">





        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/receipt_detail_list"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"

            android:padding="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="5dp"
            android:paddingRight="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.698"
            android:background="@drawable/customborder"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <TextView
            android:id="@+id/receipt_sup"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_sup"
            app:layout_constraintBottom_toTopOf="@+id/receipt_source"
            app:layout_constraintStart_toStartOf="@+id/receipt_dep"
            app:layout_constraintTop_toBottomOf="@+id/receipt_dep" />

        <TextView
            android:id="@+id/receipt_emp"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_emp"
            app:layout_constraintBottom_toTopOf="@+id/receipt_dep"
            app:layout_constraintStart_toStartOf="@+id/receipt_store_lab"
            app:layout_constraintTop_toBottomOf="@+id/receipt_store_lab" />

        <TextView
            android:id="@+id/receipt_source"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_note"
            app:layout_constraintBottom_toTopOf="@+id/receipt_detail_list"
            app:layout_constraintStart_toStartOf="@+id/receipt_sup"
            app:layout_constraintTop_toBottomOf="@+id/receipt_sup" />

        <Spinner
            android:id="@+id/receipt_dep_input"
            android:layout_width="195dp"
            android:layout_height="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBottom_toTopOf="@+id/receipt_sup_input"
            app:layout_constraintStart_toStartOf="@+id/receipt_emp_input"
            app:layout_constraintTop_toBottomOf="@+id/receipt_emp_input" />

        <Spinner
            android:id="@+id/receipt_emp_input"
            android:layout_width="195dp"
            android:layout_height="32dp"
            android:ems="10"
            android:inputType="textPersonName"


            android:text="Name"
            app:layout_constraintBottom_toTopOf="@+id/receipt_dep_input"
            app:layout_constraintStart_toStartOf="@+id/receipt_store_input"
            app:layout_constraintTop_toBottomOf="@+id/receipt_store_input" />

        <Spinner
            android:id="@+id/receipt_sup_input"
            android:layout_width="195dp"
            android:layout_height="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBottom_toTopOf="@+id/receipt_note_input"
            app:layout_constraintStart_toStartOf="@+id/receipt_dep_input"
            app:layout_constraintTop_toBottomOf="@+id/receipt_dep_input" />

        <EditText
            android:id="@+id/receipt_note_input"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:ems="10"
            android:inputType="textPersonName"


            android:text="@={receipt.receiptNote}"
            app:layout_constraintBottom_toTopOf="@+id/receipt_detail_list"
            app:layout_constraintStart_toStartOf="@+id/receipt_sup_input"
            app:layout_constraintTop_toBottomOf="@+id/receipt_sup_input" />


        <TextView
            android:id="@+id/receipt_dep"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receipt_dep"
            app:layout_constraintBottom_toTopOf="@+id/receipt_sup"
            app:layout_constraintStart_toStartOf="@+id/receipt_emp"
            app:layout_constraintTop_toBottomOf="@+id/receipt_emp" />

        <TextView
            android:id="@+id/receipt_store_lab"
            style="@style/Label_Style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/stores"
            app:layout_constraintBottom_toTopOf="@+id/receipt_emp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/receipt_store_input"
            android:layout_width="195dp"
            android:layout_height="32dp"
            android:layout_marginStart="84dp"
            android:layout_marginLeft="84dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="Name"
            app:layout_constraintBottom_toTopOf="@+id/receipt_emp_input"
            app:layout_constraintStart_toEndOf="@+id/receipt_store_lab"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/back_btn"
            style="@style/button_Style"
            android:layout_width="75dp"
            android:layout_height="28dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/buttonbg"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_add_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/item_add_btn"
            style="@style/button_Style"
            android:layout_width="79dp"
            android:layout_height="31dp"
            android:layout_marginBottom="40dp"

            android:text="@string/add_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/back_btn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>